[package]
name = "identicons-svg"
version = "0.1.0"
description = "A crate to quickly generate identicons avatar pictures."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
random_color = "0.6.1"
simple-xml-builder = "1.1.0"
webbrowser = {version = "0.7.1", optional = true}

[features]
show-icon = ["dep:webbrowser"]